--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
         <!-- Section 2 -->
         <div class="portfolio-section">
             <h1>About Me</h1>
-            <p>Here's some information about me...</p>
+            <p>i play minecraft</p>
+            <p>uh i also am a youtuber</p>
+            <p>i make music on my youtube channel and i also sometimes post games</p>
+            <p><small>https://www.youtube.com/@prodbyhidakii/featured</small></p>
         </div>
 
         <!-- Section 3 -->
         <div class="portfolio-section">
             <h1>My Work</h1>
             <p>Check out some of my projects and work.</p>
+            <a href="https://kylethemusicguy.github.io/fun-things-on-github/" target="_blank">Fun things on Github (definitley not a game website)</a>
         </div>
 
         <!-- Section 4 (Dynamic) -->
